# nordic-pawr-course

./: .gitignore  LICENSE  README.md
access_point_device/: CMakeLists.txt  prj.conf
access_point_device/src/: main.c
endpoint_device/: nrf52840dk_nrf52840.overlay  prj.conf
endpoint_device/src/: main.c
hex/: sensor_collector.hex  sensor_node.hex  sensor_node_no_2.hex  sensor_node_no_3.hex
patches/: epaper_display_sleep_support.diff  pawr_fix.diff  waveshare_2_13_inch_display_support.diff
sensor_collector/: CMakeLists.txt  prj.conf
sensor_collector/src/: main.c
sensor_node/: CMakeLists.txt  prj.conf
sensor_node/src/: main.c
sensor_node/src/app/: ble_interface.c  ble_interface.h  device_id.h  epaper_display.c  epaper_display.h  sensor_interface.c  sensor_interface.h  sensor_node_sm.c  sensor_node_sm.h
